fixed form fieldset collapse style

--- a/webroot/css/backend.css
+++ b/webroot/css/backend.css
@@ -551,11 +551,12 @@ form fieldset legend ~ * {
 form fieldset > .body {
   padding: 0 1.18em;
   transition: height 1s;
-  overflow: hidden;
   height: auto;
+  overflow: visible;
 }
 form fieldset.collapsed > .body {
   height: 0;
+  overflow: hidden;
 }
 form fieldset.collapsed > legend {
   display: block;
